--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,5 +15,11 @@
     <h1>{{title}}</h1>
     <router-outlet></router-outlet>
   </div>
-  <img width="300" src="eyecancer">
 </div>
+  <img width="300" src="eyecancer">
+
+<footer class="footer">
+  <div class="container">
+    <a class="text-muted" routerLink="admin">Admin</a>
+  </div>
+</footer>
