--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
+html {
+  margin-bottom: 75px;
+}
+
 .footer {
   position: fixed;
   bottom: 0;
