--- a/src/app/album-detail/album-detail.component.html
+++ b/src/app/album-detail/album-detail.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <h3>{{(albumToDisplay | async).title}}</h3>
-  <h4>{{(albumToDisplay | async).artist}}</h4>
-  <p>{{(albumToDisplay | async).description}}</p>
+  <h3>{{(albumToDisplay | async)?.title}}</h3>
+  <h4>{{(albumToDisplay | async)?.artist}}</h4>
+  <p>{{(albumToDisplay | async)?.description}}</p>
 </div>
